--- a/index.html
+++ b/index.html
@@ -52,19 +52,19 @@
     <div class="row">
         <figure class="squared-sixteen">
             <a href="hund.html" target="_blank">
-                <img src="lückenfüller.website.png" alt="Hund">
+                <img src="colin.png" alt="Hund">
             </a>
             <figcaption></figcaption>
         </figure>
         <figure class="squared-sixteen">
             <a href="pflanze.html" target="_blank">
-                <img src="lückenfüller.website.png" alt="Pflanze">
+                <img src="pflanze.efeutute.html 1.png" alt="Pflanze">
             </a>
             <figcaption></figcaption>
         </figure>
         <figure class="squared-sixteen">
             <a href="wolf.html" target="_blank">
-                <img src="lückenfüller.website.png" alt="Wolf">
+                <img src="dude.png" alt="Wolf">
             </a>
             <figcaption></figcaption>
         </figure>
@@ -75,23 +75,23 @@
     </section>
 
     <!-- Abschnitt About -->
-    <section id="about" class="zentrierter-text">
+    <section id="about" class="container">
         <h2>About</h2>
         <p>
-            Heyy,<br>
-            mein Name ist Isabella, und ich befinde mich derzeit im Studium<br>
-            der Visuellen Kommunikation an der Hochschule für Bildende<br>
-            Künste (HBK) in Braunschweig. Im Rahmen meines Studiums ist das<br>
-            Fach Digitale Kommunikation Teil der Grundlagen.<br>Auf dieser Webseite präsentiere ich die drei Projekte,<br>
-            die ich im zweiten Semester meines Studiums entwickelt habe.<br>
+            Heyy,
+            mein Name ist Isabella, und ich befinde mich derzeit im Studium
+            der Visuellen Kommunikation an der Hochschule für Bildende
+            Künste (HBK) in Braunschweig. Im Rahmen meines Studiums ist das
+            Fach Digitale Kommunikation Teil der Grundlagen. Auf dieser Webseite präsentiere ich die drei Projekte,
+            die ich im zweiten Semester meines Studiums entwickelt habe.
             Viel Spaß :)
         </p>
     </section>
 
     <div class="footer-note">
-        Isabella Schlüter Visuelle Kommunikation - Digitale Gestaltung Doz. Fabian Morón Zirfas
+        Isabella Schlüter Visuelle Kommunikation - Digitale Gestaltung bei Fabian Morón Zirfas
     </div>
-    
+
 </body>
 </html>
 
