--- a/pflanze.html
+++ b/pflanze.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pflanze</title>
+    <title>Efeutute</title>
     <link rel="stylesheet" href="pflanze.css"> <!-- Optional, falls du eine externe CSS-Datei hast -->
 </head>
 <link rel="shortcut icon" href="smilie.ico" type="image/x-icon">
@@ -22,6 +22,12 @@
    <header>
         <h1>Was hat meine Efeutute?</h1>
     </header>
+
+
+    <section class="hero-image">
+        <img src="efeutute.zwei 1.png" alt="Efeutute">
+    </section>
+
     <main>
         <section>
             <h2>Die Pflanzenhilfe</h2>
@@ -44,18 +50,28 @@
                     Nach Abschluss des Trainings kann das Modell auf neue Daten angewendet werden, um dessen Leistung zu überprüfen. Die Ergebnisse der Analyse werden in Form von Prozentwerten dargestellt, die angeben, wie hoch der Übereinstimmungsgrad der neuen Daten mit den definierten Klassen ist. Dies erlaubt eine messbare Bewertung, wie genau und effektiv das Modell bei der Einordnung der Blattzustände ist.
                 </p>
 
-            <h2>des weiteren</h2>
-            <p>Das Design der Seite enthält bereits einige ansprechende Elemente, die einen guten Eindruck von der geplanten Benutzeroberfläche vermitteln. Allerdings gibt es noch Potenzial für Verbesserungen, um die Nutzererfahrung weiter zu optimieren. Ein wesentliches fehlendes Element ist eine Ladeanzeige. Ohne eine solche visuelle Rückmeldung besteht die Gefahr, dass Nutzer irrtümlich annehmen, die Seite sei eingefroren oder funktioniere nicht mehr.</p>
+            <h2>Probleme</h2>
+            <p>Die Website hat schon einige gute Design-Elemente. Es gibt jedoch noch Raum für Verbesserungen, um die Nutzererfahrung zu verbessern. Besonders wichtig wäre die Einführung einer Ladeanzeige. Ohne diese könnte es den Anschein haben, dass die Seite nicht funktioniert oder eingefroren ist.</p>
 
-            <p>Des Weiteren führt das Modell in einigen Fällen noch zu ungenauen oder fehlerhaften Ergebnissen. Dies deutet darauf hin, dass die zugrunde liegende Datenbank an Blättern erweitert werden muss, um die Genauigkeit der Klassifikationen zu verbessern. Die Beschaffung von geeignetem Fotomaterial gestaltet sich jedoch als herausfordernd, was die Weiterentwicklung des Projekts erschweren könnte. Dennoch wäre eine erweiterte und diversifizierte Datenbank entscheidend, um die Zuverlässigkeit und Präzision des Modells deutlich zu erhöhen.</p>
+            <p>Das Modell liefert in einigen Fällen ungenaue oder fehlerhafte Ergebnisse. Dies deutet darauf hin, dass die Datenbank mit Bildern von Blättern vergrößert werden muss, um die Klassifikationen präziser zu machen. Es ist jedoch schwierig, das notwendige Fotomaterial zu beschaffen, was die Weiterentwicklung des Projekts erschwert. Eine größere und vielfältigere Datenbank wäre jedoch entscheidend, um die Genauigkeit und Zuverlässigkeit des Modells zu verbessern.</p>
+
+            <h2>Erkenntnisse</h2>
+            <p>Wesentliche Erkenntnisse beziehen sich auf das Verhalten der Efeutute (Epipremnum aureum) und die verschiedenen Ursachen für Blattverfärbungen. Es hat sich gezeigt, dass ähnliche Blattverfärbungen unterschiedliche Ursachen haben können, was eine präzise Diagnose erforderlich macht.</p>
+            
+            <p>
+                
+            Zudem zeigte sich, dass mehr Bildmaterial benötigt wird als anfänglich gedacht, um genaue Ergebnisse zu erzielen. Eine größere Menge an Bildern ist notwendig, um die Diagnosetools zuverlässig zu machen und zielführende Ergebnisse bei der Pflanzenpflege zu gewährleisten.</p>
 
             <h2>Zukunftsideen</h2>
-            <p>Zukunftsperspektiven und Erweiterungsmöglichkeiten: Eine sinnvolle Weiterentwicklung des Projekts könnte die Integration einer Funktion sein, die es Nutzern ermöglicht, auf mobilen Geräten direkt die Kamera zu verwenden, anstatt eine bereits gespeicherte Datei hochzuladen. Diese Funktion würde die Benutzerfreundlichkeit erheblich verbessern, indem sie den Prozess vereinfacht, ein Foto des betroffenen Blattes aufzunehmen und es unmittelbar zur Analyse hochzuladen. Für die Nutzung auf Computern wäre es jedoch weiterhin wichtig, die Möglichkeit zum Hochladen von Bilddateien beizubehalten, um den unterschiedlichen Anforderungen der Nutzer gerecht zu werden.</p>
+            <p>Eine sinnvolle Weiterentwicklung des Projekts könnte die Integration einer Funktion sein, die es Nutzern ermöglicht, auf mobilen Geräten direkt die Kamera zu verwenden, anstatt eine bereits gespeicherte Datei hochzuladen. Diese Funktion würde die Benutzerfreundlichkeit erheblich verbessern, indem sie den Prozess vereinfacht, ein Foto des betroffenen Blattes aufzunehmen und es unmittelbar zur Analyse hochzuladen. Für die Nutzung auf Computern wäre es jedoch weiterhin wichtig, die Möglichkeit zum Hochladen von Bilddateien beizubehalten, um den unterschiedlichen Anforderungen der Nutzer gerecht zu werden.</p>
 
             <p>Darüber hinaus wäre es ratsam, die Analysekapazitäten des Tools durch die Integration weiterer Krankheiten und Schädlinge zu erweitern, die die Efeutute befallen können. Eine solche Erweiterung würde die diagnostische Präzision des Modells deutlich erhöhen und somit einen höheren praktischen Nutzen bieten.</p>
 
             <p>Langfristig könnte das Projekt zusätzlich auf die Identifikation und Analyse anderer Pflanzenarten ausgeweitet werden. Allerdings stellt die Verfügbarkeit von ausreichend qualitativ hochwertigem Bildmaterial eine signifikante Herausforderung dar. Bereits bei der Efeutute, einer weit verbreiteten und beliebten Pflanze, zeigte sich, dass nicht immer genügend geeignetes Bildmaterial vorhanden war. Diese Problematik könnte bei weniger populären Pflanzenarten noch ausgeprägter sein. Nichtsdestotrotz könnte eine Erweiterung der Datenbank und der unterstützten Pflanzenarten die Anwendbarkeit und den Wert des Tools erheblich steigern, wenngleich dies mit einem erhöhten Aufwand in der Datenakquise verbunden wäre</p>
+            <a href="https://efeutute.netlify.app">zur Website</a>
+
         </section>
+
         <a href="index.html" class="back-button">Zurück</a>
     </main>
 
