--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
             Digitale Kommunikation
         </h1>
     </section>
-
+    
+    <div class="column">
     <div class="row">
         <figure class="squared-sixteen">
             <a href="hund.html" target="_blank">
