--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             });
         });
     </script>
+
     <link rel="shortcut icon" href="smilie.ico" type="image/x-icon">
 
     <!-- Banner mit Logo und Navigation -->
@@ -59,7 +60,7 @@
 
     <!-- Foto unter dem Banner -->
     <section class="hero-image">
-        <img src="efeutute.grau.png" alt="Efeutute">
+        <img src="ranken.grau.efeu.png" alt="Efeutute">
     </section>
 
     <!-- Hauptinhalt der Seite -->
@@ -68,7 +69,7 @@
             Digitale Kommunikation
         </h1>
     </section>
-    
+
     <div class="column">
     <div class="row">
         <figure class="squared-sixteen">
@@ -93,7 +94,7 @@
 
     <!-- Foto unter den Fotos -->
     <section class="hero-image">
-        <img src="efeutute.grau.png" alt="Efeutute">
+        <img src="ranken.grau.efeu.png" alt="Efeutute">
     </section>
 
     <!-- Abschnitt About -->
@@ -111,8 +112,8 @@
     </section>
 
     <div class="footer-note">
-        Isabella Schlüter Visuelle Kommunikation - Digitale Gestaltung bei Fabian Morón Zirfas
+        Isabella Schlüter Visuelle Kommunikation - Digitale Kommunikation bei Fabian Morón Zirfas
     </div>
-
+</div>
 </body>
 </html>
